# cgp

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yml
crates/cgp/: Cargo.toml
crates/cgp-async/: Cargo.toml
crates/cgp-async-macro/: Cargo.toml
crates/cgp-async-macro/src/: impl_async.rs  lib.rs
crates/cgp-async/src/: async.rs  lib.rs  sync.rs
crates/cgp-async/src/sync/: macros.rs
crates/cgp-component/: Cargo.toml
crates/cgp-component-macro/: Cargo.toml
crates/cgp-component-macro-lib/: Cargo.toml
crates/cgp-component-macro-lib/src/: for_each_replace.rs  lib.rs
crates/cgp-component-macro-lib/src/delegate_components/: ast.rs  define.rs  define_struct.rs  delegate.rs  delegates_to.rs  impl_delegate.rs  merge_generics.rs  mod.rs  substitution_macro.rs
crates/cgp-component-macro-lib/src/derive_component/: component_name.rs  component_spec.rs  consumer_impl.rs  delegate_fn.rs  delegate_type.rs  derive.rs  entry.rs  mod.rs  provider_impl.rs  provider_trait.rs  replace_self_receiver.rs  replace_self_type.rs  signature_args.rs  snake_case.rs
crates/cgp-component-macro-lib/src/preset/: ast.rs  define_preset.rs  impl_is_preset.rs  mod.rs  substitution_macro.rs
crates/cgp-component-macro-lib/src/tests/: define_components.rs  derive_component.rs  mod.rs
crates/cgp-component-macro/src/: lib.rs
crates/cgp-component-macro/src/helper/: consumer_impl.rs  delegate_type.rs  derive.rs  mod.rs  provider_impl.rs  provider_trait.rs
crates/cgp-component-macro/src/tests/: basic.rs  const_generic.rs  mod.rs
crates/cgp-component-sync/: Cargo.toml  src
crates/cgp-component/src/: lib.rs
crates/cgp-component/src/macros/: delegate_all.rs  delegate_component.rs  delegate_components.rs  expand_delegate_constraints.rs  mod.rs
crates/cgp-component/src/traits/: delegate_component.rs  has_components.rs  mod.rs  sync.rs
crates/cgp-component/src/types/: delegate_to.rs  mod.rs  use_context.rs  use_delegate.rs  with_provider.rs
crates/cgp-core/: Cargo.toml
crates/cgp-core-sync/: Cargo.toml  src
crates/cgp-core/src/: lib.rs  prelude.rs
crates/cgp-core/src/traits/: mod.rs
crates/cgp-error/: Cargo.toml
crates/cgp-error-eyre/: Cargo.toml
crates/cgp-error-eyre/src/: lib.rs
crates/cgp-error-std/: Cargo.toml
crates/cgp-error-std/src/: lib.rs
crates/cgp-error-sync/: Cargo.toml  src
crates/cgp-error/src/: can_raise_error.rs  delegate_error.rs  has_error_type.rs  lib.rs
crates/cgp-extra/: Cargo.toml
crates/cgp-field/: Cargo.toml
crates/cgp-field-macro/: Cargo.toml
crates/cgp-field-macro-lib/: Cargo.toml
crates/cgp-field-macro-lib/src/: field.rs  lib.rs  product.rs  symbol.rs
crates/cgp-field-macro-lib/src/tests/: field.rs  mod.rs  symbol.rs
crates/cgp-field-macro/src/: lib.rs
crates/cgp-field/src/: lib.rs  traits.rs
crates/cgp-field/src/impls/: mod.rs  use_field.rs
crates/cgp-field/src/traits/: has_field.rs  has_field_mut.rs  mod.rs
crates/cgp-field/src/types/: char.rs  field.rs  index.rs  mod.rs  product.rs  sum.rs
crates/cgp-inner/: Cargo.toml
crates/cgp-inner-sync/: Cargo.toml  src
crates/cgp-inner/src/: lib.rs
crates/cgp-macros/: Cargo.toml
crates/cgp-macros/src/: lib.rs
crates/cgp-macros/src/helper/: mod.rs
crates/cgp-run/: Cargo.toml
crates/cgp-run-sync/: Cargo.toml  src
crates/cgp-run/src/: lib.rs
crates/cgp-strip-async/: Cargo.toml
crates/cgp-strip-async/src/: lib.rs
crates/cgp-sync/: Cargo.toml
crates/cgp-sync/src/: lib.rs
crates/cgp-type/: Cargo.toml
crates/cgp-type/src/impls/: mod.rs
crates/cgp-type/src/traits/: has_type.rs
crates/cgp/src/: lib.rs
