[workspace]

resolver = "2"

members = [
    "crates/cgp-async",
    "crates/cgp-async-macro",
    "crates/cgp-sync",
    "crates/cgp-component",
    "crates/cgp-component-macro",
    "crates/cgp-component-macro-lib",
    "crates/cgp-error",
    "crates/cgp-error-eyre",
    "crates/cgp-error-std",
    "crates/cgp-core",
    "crates/cgp-run",
    "crates/cgp-inner",
]

[workspace.package]
rust-version    = "1.75"
edition         = "2021"
license         = "Apache-2.0"
repository      = "https://github.com/informalsystems/cgp"
authors         = ["Informal Systems <hello@informal.systems>", "Soares Chen <soares.chen@maybevoid.com>"]

[patch.crates-io]
cgp-core                    = { path = "./crates/cgp-core" }
cgp-async                   = { path = "./crates/cgp-async" }
cgp-async-macro             = { path = "./crates/cgp-async-macro" }
cgp-sync                    = { path = "./crates/cgp-sync" }
cgp-component               = { path = "./crates/cgp-component" }
cgp-component-macro         = { path = "./crates/cgp-component-macro" }
cgp-component-macro-lib     = { path = "./crates/cgp-component-macro-lib" }
cgp-error                   = { path = "./crates/cgp-error" }
cgp-run                     = { path = "./crates/cgp-run" }
cgp-inner                   = { path = "./crates/cgp-inner" }
