[package]
name         = "cgp-async-macro"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
version      = "0.1.0"
keywords     = ["context-generic programming"]
description  = """
    Context-generic programming async macros
"""

[lib]
proc-macro = true

[features]

[dependencies]
syn = { version = "2.0.37", features = [ "full" ] }
quote = "1.0.33"
proc-macro2 = "1.0.67"