[package]
name         = "cgp-async"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
keywords     = ["context-generic programming"]
description  = """
    Async-generic primitives to support both sync/async in Context-generic programming
"""

[dependencies]
cgp-async-macro = { version = "0.1.0" }
