[package]
name         = "cgp-async"
version      = "0.2.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Async-generic primitives to support both sync/async in context-generic programming
"""

[features]
default = [ "full" ]
full = [
    "async",
    "send",
    "sync",
    "static",
]
async = []
send = [ "async" ]
sync = [ "async" ]
static = [ "async" ]

[dependencies]
cgp-async-macro = { version = "0.2.0" }
cgp-sync = { version = "0.2.0" }