[package]
name         = "cgp-component-macro"
version      = "0.2.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core component macros
"""

[lib]
proc-macro = true

[dependencies]
cgp-component-macro-lib = { version = "0.2.0" }
proc-macro2     = "1.0.92"