[package]
name         = "cgp-component"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = ["context-generic programming"]
description  = """
    Context-generic programming core component traits
"""

[dependencies]
cgp-async = { version = "0.1.0" }
cgp-component-macro = { version = "0.1.0" }
