[package]
name         = "cgp-component"
version      = "0.2.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core component traits
"""

[dependencies]
cgp-component-macro = { version = "0.2.0" }
