[package]
name         = "cgp-error-eyre"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
keywords     = ["context-generic programming"]
description  = """
    Context-generic programming core traits
"""

[dependencies]
cgp-core    = { version = "0.1.0" }
eyre        = { version = "0.6.11" }