[package]
name         = "cgp-error-eyre"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming error handlers implemented using eyre
"""

[dependencies]
cgp-core    = { version = "0.1.0" }
eyre        = { version = "0.6.11" }