[package]
name         = "cgp-error-std"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = ["context-generic programming"]
description  = """
    Context-generic programming error handlers implemented using `std::error::Error`
"""

[dependencies]
cgp-core    = { version = "0.1.0" }