[package]
name         = "cgp-error"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming error components
"""

[dependencies]
cgp-async       = { version = "0.1.0" }
cgp-component   = { version = "0.1.0" }
