[package]
name         = "cgp-extra"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming extra meta-crate
"""

[dependencies]
cgp-run        = { version = "0.1.0" }
