[package]
name         = "cgp-field-macro-lib"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field macros as a library
"""

[dependencies]
syn = { version = "2.0.37", features = [ "full" ] }
quote = "1.0.33"
proc-macro2 = "1.0.67"
itertools = "0.11.0"
prettyplease = "0.2.20"
