[package]
name         = "cgp-field-macro-lib"
version      = "0.2.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field macros as a library
"""

[dependencies]
syn = { version = "2.0.90", features = [ "full" ] }
quote = "1.0.33"
proc-macro2 = "1.0.92"
itertools = "0.13.0"
prettyplease = "0.2.20"
