[package]
name         = "cgp-field-macro"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
keywords     = ["context-generic programming"]
description  = """
    Context-generic programming core macros
"""

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
cgp-field-macro-lib = { version = "0.1.0" }
proc-macro2     = "1.0.67"