[package]
name         = "cgp-field"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field traits
"""

[dependencies]
cgp-field-macro = { version = "0.1.0" }
