[package]
name         = "cgp-field"
version      = "0.2.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field traits
"""

[dependencies]
cgp-field-macro = { version = "0.2.0" }
cgp-component   = { version = "0.2.0" }
cgp-type        = { version = "0.2.0" }