[package]
name         = "cgp-inner"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = ["context-generic programming"]
description  = """
    Context-generic programming inner component
"""

[dependencies]
cgp-async = { version = "0.1.0" }
cgp-component = { version = "0.1.0" }