[package]
name         = "cgp-run"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["context-generic programming"]
repository   = "https://github.com/informalsystems/cgp"
authors      = ["Informal Systems <hello@informal.systems>", "Soares Chen <soares.chen@maybevoid.com>"]
rust-version = "1.72"
description  = """
    Context-generic programming core traits
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
cgp-async = { version = "0.1.0" }
cgp-error = { version = "0.1.0" }
cgp-component = { version = "0.1.0" }