[package]
name         = "cgp-sync"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["context-generic programming"]
repository   = "https://github.com/informalsystems/cgp"
authors      = ["Informal Systems <hello@informal.systems>", "Soares Chen <soares.chen@maybevoid.com>"]
rust-version = "1.72"
description  = """
    Async-generic primitives to support both sync/async in Context-generic programming
"""

[dependencies]
cgp-strip-async = { version = "0.1.0" }