[package]
name         = "cgp-sync"
version      = "0.1.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Async-generic primitives to support both sync/async in context-generic programming
"""

[dependencies]
cgp-async-macro = { version = "0.1.0" }